<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_no_todo"
        android:enabled="true"
        android:icon="@drawable/ic_no_todo_unselected_24dp"
        android:title="@string/no_todo"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_done_todo"
        android:enabled="true"
        android:icon="@drawable/ic_done_todo_unselected_24dp"
        android:title="@string/done_todo"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_mine"
        android:enabled="true"
        android:icon="@drawable/ic_mine_unselected_24dp"
        android:title="@string/mine"
        app:showAsAction="ifRoom"/>

</menu>