<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/layout_toolbar"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_colon"
                    android:textColor="@color/text_title"
                    android:textSize="@dimen/text_title" />

                <EditText
                    android:id="@+id/titleEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@null"
                    android:hint="@string/required"
                    android:maxLines="1"
                    android:textColor="@color/text_title"
                    android:textSize="@dimen/text_title" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_colon"
                    android:textColor="@color/text_title"
                    android:textSize="@dimen/text_title" />

                <EditText
                    android:id="@+id/contentEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="@string/not_required"
                    android:inputType="text|textMultiLine"
                    android:minHeight="100dp"
                    android:textColor="@color/text_title"
                    android:textSize="@dimen/text_title" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />

            <LinearLayout
                android:id="@+id/dateLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_colon"
                    android:textColor="@color/text_title"
                    android:textSize="@dimen/text_title" />

                <TextView
                    android:id="@+id/dateText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@null"
                    android:textColor="@color/text_title"
                    android:textSize="@dimen/text_title"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />

        </LinearLayout>

        <TextView
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/selector_button"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="16sp"
             />



</RelativeLayout>